--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		</repository>
 	</repositories>
   <properties>
-    <org.springframework.version>3.0.5.RELEASE</org.springframework.version>
+    <org.springframework.version>3.2.5.RELEASE</org.springframework.version>
   </properties>
   <dependencies>
     <dependency>
@@ -54,16 +54,7 @@
 	  <version>${org.springframework.version}</version>
 	</dependency>
 	 
-	<!--
-	    Aspect Oriented Programming (AOP) Framework (depends on spring-core, spring-beans)
-	    Define this if you use Spring AOP APIs (org.springframework.aop.*)
-	-->
-	<dependency>
-	  <groupId>org.springframework</groupId>
-	  <artifactId>spring-aop</artifactId>
-	  <version>${org.springframework.version}</version>
-	</dependency>
-	 
+
 	<!--
 	    Application Context (depends on spring-core, spring-expression, spring-aop, spring-beans)
 	    This is the central artifact for Spring's Dependency Injection Container and is generally always defined
@@ -169,31 +160,8 @@
 	  <scope>test</scope>
 	</dependency>
 	
-	<dependency>  
-       <groupId>log4j</groupId>  
-       <artifactId>log4j</artifactId>  
-       <version>1.2.15</version>  
-       <exclusions>  
-         <exclusion>  
-           <groupId>javax.mail</groupId>  
-           <artifactId>mail</artifactId>  
-         </exclusion>  
-         <exclusion>  
-           <groupId>javax.jms</groupId>  
-           <artifactId>jms</artifactId>  
-         </exclusion>  
-         <exclusion>  
-           <groupId>com.sun.jdmk</groupId>  
-           <artifactId>jmxtools</artifactId>  
-         </exclusion>  
-         <exclusion>  
-           <groupId>com.sun.jmx</groupId>  
-           <artifactId>jmxri</artifactId>  
-         </exclusion>  
-       </exclusions>  
-       <scope>runtime</scope>  
-     </dependency>  
-     
+
+
 	<dependency>
 		<groupId>org.hibernate</groupId>
 		<artifactId>hibernate-core</artifactId>
@@ -219,19 +187,95 @@
 		<version>1.1.2</version>
 		<scope>runtime</scope>
 	</dependency>
-	
-	<dependency>
-	  <groupId>commons-dbcp</groupId>
-	  <artifactId>commons-dbcp</artifactId>
-	  <version>1.4</version>
-	</dependency>
-        
-   <dependency>
+
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-dbcp2</artifactId>
+          <version>2.1.1</version>
+      </dependency>
+
+      <dependency>
+          <groupId>commons-dbcp</groupId>
+          <artifactId>commons-dbcp</artifactId>
+          <version>1.4</version>
+      </dependency>
+
+
+      <dependency>
+          <groupId>commons-pool</groupId>
+          <artifactId>commons-pool</artifactId>
+          <version>1.6</version>
+      </dependency>
+
+      <dependency>
+          <groupId>commons-fileupload</groupId>
+          <artifactId>commons-fileupload</artifactId>
+          <version>1.3.1</version>
+      </dependency>
+
+
+      <dependency>
 	    <groupId>mysql</groupId>
 	    <artifactId>mysql-connector-java</artifactId>
 	    <version>5.1.9</version>
-	</dependency>
-	
+   </dependency>
+
+
+    <!-- Spring Security Modules-->
+  <dependency>
+	  <groupId>org.springframework.security</groupId>
+	  <artifactId>spring-security-web</artifactId>
+	  <version>${org.springframework.version}</version>
+  </dependency>
+  <dependency>
+	  <groupId>org.springframework.security</groupId>
+	  <artifactId>spring-security-config</artifactId>
+	  <version>${org.springframework.version}</version>
+  </dependency>
+  <dependency>
+	  <groupId>org.springframework.security</groupId>
+	  <artifactId>spring-security-core</artifactId>
+	  <version>${org.springframework.version}</version>
+  </dependency>
+
+      <!-- Validations-->
+  <dependency>
+	  <groupId>javax.validation</groupId>
+	  <artifactId>validation-api</artifactId>
+	  <version>1.1.0.Final</version>
+  </dependency>
+
+  <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>4.3.2.Final</version>
+  </dependency>
+
+      <dependency>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+          <version>1.2.17</version>
+      </dependency>
+
+
+      <!-- Hibernate search -->
+      <dependency>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-search-engine</artifactId>
+          <version>4.5.3.Final</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-search-orm</artifactId>
+          <version>4.5.3.Final</version>
+      </dependency>
+      <dependency>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-search-orm</artifactId>
+          <version>4.5.3.Final</version>
+      </dependency>
+
   </dependencies>
   <build>
     <finalName>Onlibrary</finalName>
