fix security form-login

--- a/pom.xml
+++ b/pom.xml
@@ -214,23 +214,18 @@
         </dependency>
 
 
-    <!-- Spring Security Modules-->
+        <!--Spring security-->
+
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
-            <version>4.0.4.RELEASE</version>
+            <version>4.0.3.RELEASE</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
-            <version>4.0.4.RELEASE</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-core</artifactId>
-            <version>4.0.4.RELEASE</version>
+            <version>4.0.3.RELEASE</version>
         </dependency>
 
     <!-- Validations-->
